chore(style): Apply Code Style (#12233)