@@ -5,8 +5,19 @@
  */
 package org.camunda.optimize.service.importing.ingested;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.camunda.optimize.dto.optimize.query.variable.VariableType.DOUBLE;
+import static org.camunda.optimize.dto.optimize.query.variable.VariableType.LONG;
+import static org.camunda.optimize.dto.optimize.query.variable.VariableType.OBJECT;
+import static org.camunda.optimize.dto.optimize.query.variable.VariableType.STRING;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.IntStream;
 import lombok.SneakyThrows;
 import org.assertj.core.groups.Tuple;
 import org.camunda.optimize.dto.optimize.ProcessInstanceDto;
@@ -17,24 +28,13 @@ import org.camunda.optimize.service.importing.ingested.service.ExternalVariableU
 import org.camunda.optimize.service.util.InstanceIndexUtil;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.IntStream;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.camunda.optimize.dto.optimize.query.variable.VariableType.DOUBLE;
-import static org.camunda.optimize.dto.optimize.query.variable.VariableType.LONG;
-import static org.camunda.optimize.dto.optimize.query.variable.VariableType.OBJECT;
-import static org.camunda.optimize.dto.optimize.query.variable.VariableType.STRING;
-
 public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
 
   @Test
   public void singleIngestedVariableIsWrittenToInstanceIndex() {
     // given
-    final ExternalProcessVariableRequestDto externalVariable = ingestionClient.createPrimitiveExternalVariable();
+    final ExternalProcessVariableRequestDto externalVariable =
+        ingestionClient.createPrimitiveExternalVariable();
     ingestionClient.ingestVariables(List.of(externalVariable));
 
     // when
@@ -42,29 +42,38 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
 
     // then
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> {
-        assertThat(instance.getProcessInstanceId()).isEqualTo(externalVariable.getProcessInstanceId());
-        // we expect the key to be null as this is only set via the instance import, this will also prevent these
-        // incomplete instances from showing up in reports if there is no real matching instance for them
-        assertThat(instance.getProcessDefinitionKey()).isNull();
-        assertThat(instance.getVariables())
-          .singleElement()
-          .satisfies(variableInstance -> {
-            assertThat(variableInstance.getId()).isEqualTo(externalVariable.getId());
-            assertThat(variableInstance.getName()).isEqualTo(externalVariable.getName());
-            assertThat(variableInstance.getType()).isEqualTo(externalVariable.getType().getId());
-            assertThat(variableInstance.getVersion()).isEqualTo(ExternalVariableUpdateImportService.DEFAULT_VERSION);
-          });
-      });
+        .singleElement()
+        .satisfies(
+            instance -> {
+              assertThat(instance.getProcessInstanceId())
+                  .isEqualTo(externalVariable.getProcessInstanceId());
+              // we expect the key to be null as this is only set via the instance import, this will
+              // also prevent these
+              // incomplete instances from showing up in reports if there is no real matching
+              // instance for them
+              assertThat(instance.getProcessDefinitionKey()).isNull();
+              assertThat(instance.getVariables())
+                  .singleElement()
+                  .satisfies(
+                      variableInstance -> {
+                        assertThat(variableInstance.getId()).isEqualTo(externalVariable.getId());
+                        assertThat(variableInstance.getName())
+                            .isEqualTo(externalVariable.getName());
+                        assertThat(variableInstance.getType())
+                            .isEqualTo(externalVariable.getType().getId());
+                        assertThat(variableInstance.getVersion())
+                            .isEqualTo(ExternalVariableUpdateImportService.DEFAULT_VERSION);
+                      });
+            });
   }
 
   @Test
   public void multipleIngestedVariablesForOneInstanceIsWrittenToInstanceIndex() {
     // given
-    final List<ExternalProcessVariableRequestDto> variables = IntStream.range(0, 10)
-      .mapToObj(i -> ingestionClient.createPrimitiveExternalVariable().setId("id" + i))
-      .toList();
+    final List<ExternalProcessVariableRequestDto> variables =
+        IntStream.range(0, 10)
+            .mapToObj(i -> ingestionClient.createPrimitiveExternalVariable().setId("id" + i))
+            .toList();
 
     ingestionClient.ingestVariables(variables);
 
@@ -72,27 +81,35 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
     importIngestedDataFromScratchRefreshIndicesBeforeAndAfter();
 
     // then
-    assertThat(databaseIntegrationTestExtension.indexExists(
-      InstanceIndexUtil.getProcessInstanceIndexAliasName(variables.get(0).getProcessDefinitionKey())
-    )).isTrue();
+    assertThat(
+            databaseIntegrationTestExtension.indexExists(
+                InstanceIndexUtil.getProcessInstanceIndexAliasName(
+                    variables.get(0).getProcessDefinitionKey())))
+        .isTrue();
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> {
-        assertThat(instance.getProcessInstanceId()).isEqualTo(variables.get(0).getProcessInstanceId());
-        assertThat(instance.getVariables()).hasSize(variables.size());
-      });
+        .singleElement()
+        .satisfies(
+            instance -> {
+              assertThat(instance.getProcessInstanceId())
+                  .isEqualTo(variables.get(0).getProcessInstanceId());
+              assertThat(instance.getVariables()).hasSize(variables.size());
+            });
   }
 
   @Test
-  public void multipleIngestedVariablesForDifferentDefinitionInstancesAreWrittenToInstanceIndices() {
+  public void
+      multipleIngestedVariablesForDifferentDefinitionInstancesAreWrittenToInstanceIndices() {
     // given
-    final List<ExternalProcessVariableRequestDto> variables = IntStream.range(0, 10)
-      .mapToObj(i -> ingestionClient.createPrimitiveExternalVariable()
-        .setName(String.valueOf(i))
-        .setProcessDefinitionKey("key" + i)
-        .setProcessInstanceId(String.valueOf(i))
-      )
-      .toList();
+    final List<ExternalProcessVariableRequestDto> variables =
+        IntStream.range(0, 10)
+            .mapToObj(
+                i ->
+                    ingestionClient
+                        .createPrimitiveExternalVariable()
+                        .setName(String.valueOf(i))
+                        .setProcessDefinitionKey("key" + i)
+                        .setProcessInstanceId(String.valueOf(i)))
+            .toList();
     ingestionClient.ingestVariables(variables);
 
     // when
@@ -100,31 +117,39 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
 
     // then
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .allSatisfy(processInstanceDto -> {
-        // as process instance id and variable name are identical, check if variables are written to expected instances
-        assertThat(processInstanceDto.getVariables())
-          .extracting(SimpleProcessVariableDto::getName)
-          .containsExactly(processInstanceDto.getProcessInstanceId());
-      })
-      // ensure that all expected instances were there
-      .extracting(ProcessInstanceDto::getProcessInstanceId)
-      .containsExactlyInAnyOrder(
-        variables.stream().map(ExternalProcessVariableRequestDto::getProcessInstanceId).toArray(String[]::new)
-      );
+        .allSatisfy(
+            processInstanceDto -> {
+              // as process instance id and variable name are identical, check if variables are
+              // written to expected instances
+              assertThat(processInstanceDto.getVariables())
+                  .extracting(SimpleProcessVariableDto::getName)
+                  .containsExactly(processInstanceDto.getProcessInstanceId());
+            })
+        // ensure that all expected instances were there
+        .extracting(ProcessInstanceDto::getProcessInstanceId)
+        .containsExactlyInAnyOrder(
+            variables.stream()
+                .map(ExternalProcessVariableRequestDto::getProcessInstanceId)
+                .toArray(String[]::new));
   }
 
   @Test
   public void ingestedVariableDataIsWrittenToInstanceIndexWithConfiguredMaxPageSize() {
     // given
-    embeddedOptimizeExtension.getConfigurationService()
-      .getExternalVariableConfiguration()
-      .getImportConfiguration()
-      .setMaxPageSize(1);
+    embeddedOptimizeExtension
+        .getConfigurationService()
+        .getExternalVariableConfiguration()
+        .getImportConfiguration()
+        .setMaxPageSize(1);
 
-    final ExternalProcessVariableRequestDto externalVariable1 = ingestionClient.createPrimitiveExternalVariable();
+    final ExternalProcessVariableRequestDto externalVariable1 =
+        ingestionClient.createPrimitiveExternalVariable();
     final String externalVariableName2 = "secondVar";
-    final ExternalProcessVariableRequestDto externalVariable2 = ingestionClient.createPrimitiveExternalVariable()
-      .setId(externalVariableName2).setName(externalVariableName2);
+    final ExternalProcessVariableRequestDto externalVariable2 =
+        ingestionClient
+            .createPrimitiveExternalVariable()
+            .setId(externalVariableName2)
+            .setName(externalVariableName2);
     ingestionClient.ingestVariables(List.of(externalVariable1, externalVariable2));
 
     // when
@@ -132,21 +157,24 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
 
     // then
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> assertThat(instance.getVariables())
-        .extracting(SimpleProcessVariableDto::getId)
-        .containsExactly(externalVariable1.getId())
-      );
+        .singleElement()
+        .satisfies(
+            instance ->
+                assertThat(instance.getVariables())
+                    .extracting(SimpleProcessVariableDto::getId)
+                    .containsExactly(externalVariable1.getId()));
 
     // when
     importIngestedDataFromScratchRefreshIndicesBeforeAndAfter();
 
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> assertThat(instance.getVariables())
-        .extracting(SimpleProcessVariableDto::getId)
-        .containsExactlyInAnyOrder(externalVariable1.getId(), externalVariable2.getId())
-      );
+        .singleElement()
+        .satisfies(
+            instance ->
+                assertThat(instance.getVariables())
+                    .extracting(SimpleProcessVariableDto::getId)
+                    .containsExactlyInAnyOrder(
+                        externalVariable1.getId(), externalVariable2.getId()));
   }
 
   @Test
@@ -154,15 +182,19 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
     // given
     final String engineVariableName = "aVariable";
     final ProcessInstanceEngineDto processInstance =
-      deployAndStartSimpleServiceProcessTaskWithVariables(Map.of(engineVariableName, "aString"));
-    final ExternalProcessVariableRequestDto externalVariable1 = ingestionClient.createPrimitiveExternalVariable()
-      .setProcessDefinitionKey(processInstance.getProcessDefinitionKey())
-      .setProcessInstanceId(processInstance.getId());
-    final ExternalProcessVariableRequestDto externalVariable2 = ingestionClient.createPrimitiveExternalVariable()
-      .setId("secondVariable")
-      .setName("secondVariable")
-      .setProcessDefinitionKey(processInstance.getProcessDefinitionKey())
-      .setProcessInstanceId(processInstance.getId());
+        deployAndStartSimpleServiceProcessTaskWithVariables(Map.of(engineVariableName, "aString"));
+    final ExternalProcessVariableRequestDto externalVariable1 =
+        ingestionClient
+            .createPrimitiveExternalVariable()
+            .setProcessDefinitionKey(processInstance.getProcessDefinitionKey())
+            .setProcessInstanceId(processInstance.getId());
+    final ExternalProcessVariableRequestDto externalVariable2 =
+        ingestionClient
+            .createPrimitiveExternalVariable()
+            .setId("secondVariable")
+            .setName("secondVariable")
+            .setProcessDefinitionKey(processInstance.getProcessDefinitionKey())
+            .setProcessInstanceId(processInstance.getId());
     ingestionClient.ingestVariables(List.of(externalVariable1, externalVariable2));
 
     // when
@@ -171,25 +203,29 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
 
     // then
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> {
-        assertThat(instance.getProcessInstanceId()).isEqualTo(processInstance.getId());
-        assertThat(instance.getProcessDefinitionKey()).isEqualTo(processInstance.getProcessDefinitionKey());
-        assertThat(instance.getProcessDefinitionVersion()).isEqualTo(processInstance.getProcessDefinitionVersion());
-        assertThat(instance.getFlowNodeInstances()).isNotEmpty();
-        assertThat(instance.getVariables())
-          .extracting(SimpleProcessVariableDto::getName)
-          .containsExactlyInAnyOrder(engineVariableName, externalVariable1.getName(), externalVariable2.getName());
-      });
+        .singleElement()
+        .satisfies(
+            instance -> {
+              assertThat(instance.getProcessInstanceId()).isEqualTo(processInstance.getId());
+              assertThat(instance.getProcessDefinitionKey())
+                  .isEqualTo(processInstance.getProcessDefinitionKey());
+              assertThat(instance.getProcessDefinitionVersion())
+                  .isEqualTo(processInstance.getProcessDefinitionVersion());
+              assertThat(instance.getFlowNodeInstances()).isNotEmpty();
+              assertThat(instance.getVariables())
+                  .extracting(SimpleProcessVariableDto::getName)
+                  .containsExactlyInAnyOrder(
+                      engineVariableName, externalVariable1.getName(), externalVariable2.getName());
+            });
   }
 
   @Test
   public void ingestedVariableIsUpdated_multipleUpdatesInConsecutiveImports() {
-    // given two updates for the same variable which are ingested in separate batches and imported in two consecutive
+    // given two updates for the same variable which are ingested in separate batches and imported
+    // in two consecutive
     // import rounds
-    ExternalProcessVariableRequestDto variable = ingestionClient.createPrimitiveExternalVariable()
-      .setId("1")
-      .setValue("firstValue");
+    ExternalProcessVariableRequestDto variable =
+        ingestionClient.createPrimitiveExternalVariable().setId("1").setValue("firstValue");
 
     ingestionClient.ingestVariables(Collections.singletonList(variable));
     importIngestedDataFromScratchRefreshIndicesBeforeAndAfter();
@@ -201,27 +237,31 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
     importIngestedDataFromLastIndexRefreshIndicesBeforeAndAfter();
 
     // then
-    assertThat(databaseIntegrationTestExtension.indexExists(
-      InstanceIndexUtil.getProcessInstanceIndexAliasName(variable.getProcessDefinitionKey())
-    )).isTrue();
+    assertThat(
+            databaseIntegrationTestExtension.indexExists(
+                InstanceIndexUtil.getProcessInstanceIndexAliasName(
+                    variable.getProcessDefinitionKey())))
+        .isTrue();
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> {
-        assertThat(instance.getProcessInstanceId()).isEqualTo(variable.getProcessInstanceId());
-        assertThat(instance.getVariables())
-          .singleElement()
-          .extracting(SimpleProcessVariableDto.Fields.value)
-          .isEqualTo(Collections.singletonList("secondValue"));
-      });
+        .singleElement()
+        .satisfies(
+            instance -> {
+              assertThat(instance.getProcessInstanceId())
+                  .isEqualTo(variable.getProcessInstanceId());
+              assertThat(instance.getVariables())
+                  .singleElement()
+                  .extracting(SimpleProcessVariableDto.Fields.value)
+                  .isEqualTo(Collections.singletonList("secondValue"));
+            });
   }
 
   @Test
   public void ingestedVariableIsUpdated_multipleUpdatesInSameImport() {
-    // given two updates for the same variable which are ingested in separate batches but imported in the same import
+    // given two updates for the same variable which are ingested in separate batches but imported
+    // in the same import
     // round
-    ExternalProcessVariableRequestDto variable = ingestionClient.createPrimitiveExternalVariable()
-      .setId("1")
-      .setValue("firstValue");
+    ExternalProcessVariableRequestDto variable =
+        ingestionClient.createPrimitiveExternalVariable().setId("1").setValue("firstValue");
 
     ingestionClient.ingestVariables(Collections.singletonList(variable));
     variable.setValue("secondValue");
@@ -231,18 +271,22 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
     importIngestedDataFromScratchRefreshIndicesBeforeAndAfter();
 
     // then
-    assertThat(databaseIntegrationTestExtension.indexExists(
-      InstanceIndexUtil.getProcessInstanceIndexAliasName(variable.getProcessDefinitionKey())
-    )).isTrue();
+    assertThat(
+            databaseIntegrationTestExtension.indexExists(
+                InstanceIndexUtil.getProcessInstanceIndexAliasName(
+                    variable.getProcessDefinitionKey())))
+        .isTrue();
     assertThat(databaseIntegrationTestExtension.getAllProcessInstances())
-      .singleElement()
-      .satisfies(instance -> {
-        assertThat(instance.getProcessInstanceId()).isEqualTo(variable.getProcessInstanceId());
-        assertThat(instance.getVariables())
-          .singleElement()
-          .extracting(SimpleProcessVariableDto.Fields.value)
-          .isEqualTo(Collections.singletonList("secondValue"));
-      });
+        .singleElement()
+        .satisfies(
+            instance -> {
+              assertThat(instance.getProcessInstanceId())
+                  .isEqualTo(variable.getProcessInstanceId());
+              assertThat(instance.getVariables())
+                  .singleElement()
+                  .extracting(SimpleProcessVariableDto.Fields.value)
+                  .isEqualTo(Collections.singletonList("secondValue"));
+            });
   }
 
   @SneakyThrows
@@ -253,31 +297,36 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
     person.put("name", "Pond");
     person.put("age", 28);
     person.put("likes", List.of("optimize", "garlic"));
-    final ExternalProcessVariableRequestDto externalVariable = ingestionClient.createObjectExternalVariable(
-      new ObjectMapper().enable(SerializationFeature.INDENT_OUTPUT).writeValueAsString(person));
+    final ExternalProcessVariableRequestDto externalVariable =
+        ingestionClient.createObjectExternalVariable(
+            new ObjectMapper()
+                .enable(SerializationFeature.INDENT_OUTPUT)
+                .writeValueAsString(person));
     ingestionClient.ingestVariables(List.of(externalVariable));
 
     // when
     importIngestedDataFromScratchRefreshIndicesBeforeAndAfter();
 
     // then
-    assertThat(databaseIntegrationTestExtension.getAllProcessInstances()
-                 .stream()
-                 .findFirst()
-                 .map(ProcessInstanceDto::getVariables)
-                 .orElse(Collections.emptyList()))
-      .extracting(
-        SimpleProcessVariableDto::getName,
-        SimpleProcessVariableDto::getType,
-        SimpleProcessVariableDto::getValue
-      )
-      .containsExactlyInAnyOrder(
-        Tuple.tuple("objectVarName", OBJECT.getId(), Collections.singletonList(externalVariable.getValue())),
-        Tuple.tuple("objectVarName.name", STRING.getId(), Collections.singletonList("Pond")),
-        Tuple.tuple("objectVarName.age", DOUBLE.getId(), Collections.singletonList("28.0")),
-        Tuple.tuple("objectVarName.likes", STRING.getId(), List.of("optimize", "garlic")),
-        Tuple.tuple("objectVarName.likes._listSize", LONG.getId(), Collections.singletonList("2"))
-      );
+    assertThat(
+            databaseIntegrationTestExtension.getAllProcessInstances().stream()
+                .findFirst()
+                .map(ProcessInstanceDto::getVariables)
+                .orElse(Collections.emptyList()))
+        .extracting(
+            SimpleProcessVariableDto::getName,
+            SimpleProcessVariableDto::getType,
+            SimpleProcessVariableDto::getValue)
+        .containsExactlyInAnyOrder(
+            Tuple.tuple(
+                "objectVarName",
+                OBJECT.getId(),
+                Collections.singletonList(externalVariable.getValue())),
+            Tuple.tuple("objectVarName.name", STRING.getId(), Collections.singletonList("Pond")),
+            Tuple.tuple("objectVarName.age", DOUBLE.getId(), Collections.singletonList("28.0")),
+            Tuple.tuple("objectVarName.likes", STRING.getId(), List.of("optimize", "garlic")),
+            Tuple.tuple(
+                "objectVarName.likes._listSize", LONG.getId(), Collections.singletonList("2")));
   }
 
   @SneakyThrows
@@ -290,37 +339,50 @@ public class ExternalVariableDataImportIT extends AbstractIngestedDataImportIT {
     person.put("age", 28);
     person.put("likes", List.of("optimize", "garlic"));
     ExternalProcessVariableRequestDto externalVariable =
-      ingestionClient.createObjectExternalVariable(objectMapper.writeValueAsString(person));
+        ingestionClient.createObjectExternalVariable(objectMapper.writeValueAsString(person));
     ingestionClient.ingestVariables(List.of(externalVariable));
     importIngestedDataFromScratchRefreshIndicesBeforeAndAfter();
 
     // variable properties are updated
     person.put("age", 29);
     person.put("likes", List.of("optimize", "garlic", "tofu"));
-    externalVariable = ingestionClient.createObjectExternalVariable(objectMapper.writeValueAsString(person));
+    externalVariable =
+        ingestionClient.createObjectExternalVariable(objectMapper.writeValueAsString(person));
     ingestionClient.ingestVariables(List.of(externalVariable));
 
     // when
     importIngestedDataFromLastIndexRefreshIndicesBeforeAndAfter();
 
     // then
-    assertThat(databaseIntegrationTestExtension.getAllProcessInstances()
-                 .stream()
-                 .findFirst()
-                 .map(ProcessInstanceDto::getVariables)
-                 .orElse(Collections.emptyList()))
-      .extracting(
-        SimpleProcessVariableDto::getName,
-        SimpleProcessVariableDto::getType,
-        SimpleProcessVariableDto::getValue,
-        SimpleProcessVariableDto::getVersion
-      )
-      .containsExactlyInAnyOrder(
-        Tuple.tuple("objectVarName", OBJECT.getId(), Collections.singletonList(externalVariable.getValue()), 1000L),
-        Tuple.tuple("objectVarName.name", STRING.getId(), Collections.singletonList("Pond"), 1000L),
-        Tuple.tuple("objectVarName.age", DOUBLE.getId(), Collections.singletonList("29.0"), 1000L),
-        Tuple.tuple("objectVarName.likes", STRING.getId(), List.of("optimize", "garlic", "tofu"), 1000L),
-        Tuple.tuple("objectVarName.likes._listSize", LONG.getId(), Collections.singletonList("3"), 1000L)
-      );
+    assertThat(
+            databaseIntegrationTestExtension.getAllProcessInstances().stream()
+                .findFirst()
+                .map(ProcessInstanceDto::getVariables)
+                .orElse(Collections.emptyList()))
+        .extracting(
+            SimpleProcessVariableDto::getName,
+            SimpleProcessVariableDto::getType,
+            SimpleProcessVariableDto::getValue,
+            SimpleProcessVariableDto::getVersion)
+        .containsExactlyInAnyOrder(
+            Tuple.tuple(
+                "objectVarName",
+                OBJECT.getId(),
+                Collections.singletonList(externalVariable.getValue()),
+                1000L),
+            Tuple.tuple(
+                "objectVarName.name", STRING.getId(), Collections.singletonList("Pond"), 1000L),
+            Tuple.tuple(
+                "objectVarName.age", DOUBLE.getId(), Collections.singletonList("29.0"), 1000L),
+            Tuple.tuple(
+                "objectVarName.likes",
+                STRING.getId(),
+                List.of("optimize", "garlic", "tofu"),
+                1000L),
+            Tuple.tuple(
+                "objectVarName.likes._listSize",
+                LONG.getId(),
+                Collections.singletonList("3"),
+                1000L));
   }
 }
